2008-02-21  David Walluck  <david@jpackage.org>

	PR classpath/27204:
	* m4/acinclude.m4:
	(REGEN_WITH_JAY): Handle 'yes' as a default,
	not a directory and give more user-friendly output.
	
2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/util/regex/REException.java:
	(REException(String,Throwable,int,int)): Added
	constructor which also includes the cause.
	* gnu/java/util/regex/RETokenNamedProperty.java:
	(getHandler(String)): Add support for \p{javaX}.
	(JavaCategoryHandler): New class.
	
2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/35274:
	* m4/acinclude.m4:
	Increase maximum heap size to 768mb.

2008-02-21  Roman Kennke  <kennke@aicas.com>

	* java/awt/image/PixelInterleavedSampleModel.java
	(createCompatibleSampleModel): Adjust scanline stride for new
	width and optimize band offsets.

2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/35111:
	* resource/com/sun/tools/javac/messages.properties,
	* resource/gnu/classpath/tools/appletviewer/messages.properties,
	* resource/gnu/classpath/tools/common/Messages.properties,
	* resource/gnu/classpath/tools/getopt/Messages.properties,
	* resource/gnu/classpath/tools/jar/messages.properties,
	* resource/gnu/classpath/tools/jarsigner/messages.properties,
	* resource/gnu/classpath/tools/keytool/messages.properties,
	* resource/gnu/classpath/tools/native2ascii/messages.properties,
	* resource/gnu/classpath/tools/orbd/messages.properties,
	* resource/gnu/classpath/tools/rmic/messages.properties,
	* resource/gnu/classpath/tools/rmid/messages.properties,
	* resource/gnu/classpath/tools/rmiregistry/messages.properties,
	* resource/gnu/classpath/tools/serialver/messages.properties,
	* resource/gnu/classpath/tools/tnameserv/messages.properties,
	* resource/sun/rmi/rmic/messages.properties:
	Removed.
	* tools/Makefile.am:
	Copy .jav template files and use resource subdirectory
	of tools.
	* tools/gnu/classpath/tools/rmic/templates/ImplTie.jav,