@@ -1,3 +1,10 @@
+2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/javax/management/Translator.java:
+	(fromJava(Object[],Method)): Don't cast to Class<?>.
+	(fromJava(Object,Type)): Use ParameterizedType
+	and don't assume that List will work for Sets.
+	
 2008-02-21  David Walluck  <david@jpackage.org>
 
 	PR classpath/27204:
